<?xml version="1.0"?>
<package format="3">
  <name>zsl1_gazebo</name>
  <version>3.0.0</version>
  <description>robot gazebo for zsl1sensor and world</description>

  <maintainer email="18074224177@163.com">Bingzheng Jiang</maintainer>

  <license>Apache-2.0</license>

  <author email="18074224177@163.com">Bingzheng Jiang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>zsl1_world</exec_depend>
  <exec_depend>zsl1_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
